# Red-Medica

./: .gitignore  README.md  index.html
contracts/medical_supply_chain/: Cargo.toml  build-manual.ps1  build-manual.sh  lib.rs
contracts/medical_supply_chain/deployment/: README.md  contract-abi.json  deploy.sh  moonbeam-deployment.json  testnet-config.json  verify-deployment.js
contracts/solidity/: .env.example  DEPLOY_HARDHAT_STEPS.md  DEPLOY_REMIX_GUIDE.md  DEPLOY_SOLIDITY.md  README.md  hardhat.config.js  package-lock.json  package.json
contracts/solidity/cache/: solidity-files-cache.json
contracts/solidity/contracts/: MedicalSupplyChain.sol
contracts/solidity/scripts/: deploy.js  simple-deploy.js
contracts/solidity/test/: MedicalSupplyChain.test.js
red-medica-web/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
red-medica-web/src/: App.tsx  index.css  main.tsx
red-medica-web/src/components/: AnalyticsCharts.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  FeedbackSystem.tsx  Footer.tsx  HelpTooltip.tsx  LazyChart.tsx  LoadingIndicator.tsx  LoadingSpinner.tsx  Navbar.tsx  NetworkStatusMonitor.tsx  NotificationSystem.tsx  OnboardingFlow.tsx  PerformanceDashboard.tsx  PerformanceProvider.tsx  ProductSearch.tsx  ProductsList.tsx  ProgressIndicator.tsx  QRScanner.tsx  StatsCounter.tsx  StatusBadge.tsx  VideoTutorials.tsx  WalletConnection.tsx
red-medica-web/src/contracts/: medical_supply_chain.json
red-medica-web/src/hooks/: use-swipe.tsx  (+8 more)
scripts/: deploy-with-private-key.js  view-blockchain-data.js
(+53 files in other folders)
